# phantom-newtype-rs

./: .gitignore  CHANGELOG.md  Cargo.toml
src/: amount.rs  displayer.rs  id.rs  instant.rs  lib.rs  prelude.rs  prelude_full.rs  to.rs  trait_flag.rs
tests-nightly/: Cargo.toml
tests-nightly/src/: main.rs
