[package]
name = "phantom_newtype"
description = "Lightweight newtypes without macros."
version = "0.2.2"
authors = ["Roman Kashitsyn <roman.kashitsyn@gmail.com>", "Peter Lyons Kehl <peter.kehl@gmail.com>"]
repository = "https://github.com/roman-kashitsyn/phantom-newtype"

# Min. const generics is stable since Rust version 1.51, which still uses 2018 edition. (2021
# edition started only with 1.56.) That's also why we don't use `rust-version` - because that is
# also applicable only since 1.56.
edition = "2018"
keywords = ["newtype"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
serde = "1"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true
